[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = "0.4.41"
envy = "0.4.2"
gateway-api = { git = "https://github.com/llenotre/gateway.git" }
lol_html = "2.6.0"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
lto = true
strip = true

[features]
analytics = []