[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = "0.4.45"
envy = "0.4.2"
gateway-api = { git = "https://github.com/llenotre/gateway.git" }
lol_html = "3.0.0"
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
lto = true
strip = true

[features]
analytics = []