[package]
name = "smtp_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "*"
lettre = { version = "0.11.1", features = ["smtp-transport"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "*", features = ["macros", "rt"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
toml = "0.8.2"
tracing = "*"
log = "0.4.20"