[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = { version = "4.4.1", features = ["cookies"] }
anyhow = "1.0.78"
base64 = "0.22.0"
chrono = "0.4.31"
env_logger = "0.11.3"
futures-util = "0.3.30"
lol_html = "1.2.0"
macros = { path = "macros" }
maxminddb = "0.24.0"
pulldown-cmark = "0.10.0"
regex = "1.10.2"
reqwest = { version = "0.12.2", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "*"
tokio = "1.35.1"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-util = "0.7.10"
toml = "0.8.8"
tracing = "*"
uaparser = "0.6.1"

[profile.release]
strip = true